--- a/prework-study-guide/CSS/style.css
+++ b/prework-study-guide/CSS/style.css
@@ -4,8 +4,8 @@
 }
 header,
 footer {
-    width: 100%;
-    height: 120px;
+    width:100%;
+    height:120px;
     background-color: blue;
     color: white;
 
@@ -16,16 +16,22 @@ h2 {
 }
 img {
     display: block;
-    height: 50px;
-    width: 50px;
+    height:50px;
+    width:50px;
     margin-left: auto; 
     margin-right: auto;
 }
 ul {
-    padding-left: 40px;
-    font-size: 20px;
+    padding-left:40px;
+    font-size:20px;
 }
 p {
     text-align: center;
-    font-size: 30px;
+    font-size:30px;
+}
+.card {
+    width:80%;
+    margin:40px auto;
+    border: 5px solid gray;
+    box-shadow:5px 10px #888888;
 }
